--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "![](https://img.shields.io/badge/Microverse-blueviolet)",
   "main": "index.js",
   "dependencies": {
-    "hint": "^6.1.4",
+    "hint": "^6.1.6",
     "stylelint": "^13.13.1",
-    "stylelint-scss": "^3.21.0",
     "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0"
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
   },
   "devDependencies": {},
   "scripts": {
